# squirrel-rs

./: justfile
device/: Cargo.toml  justfile
device/usb-raw/: Cargo.toml
device/usb-raw/src/: main.rs
device/usb-raw/tests/: usb-raw-tests.rs
host/: Cargo.toml  justfile
host/lsusb/: Cargo.toml
host/lsusb/src/: main.rs
