[workspace]
members = [
    "usb-raw",
]

resolver = "3"

[workspace.dependencies]
cortex-m = { version = "0.7.7"}
cortex-m-rt = { version = "0.7.5" }
defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.1.0" }
embedded-hal = { version = "1.0.0" }
env_logger = { version = "0.11.8" }
log = { version = "0.4.29" }
nusb = { version = "0.2.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-rp = { version = "0.9.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
