[package]
name = "usb-raw"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }


